--- a/first_website/index.html
+++ b/first_website/index.html
@@ -10,5 +10,9 @@
     <p>I will descend on Chicago to discuss the latest technologies with the brightest web designers and front-end devs</p>
     <p>first change and commit with GitKraken. this line was changed</p>
     <p>second change check if push works</p>
+    <div class="social">
+      <p>I may be found on...</p>
+      <p>Additionally, I have a profile on...</p>
+    </div>
   </body>
 </html>
