--- a/first_website/index.html
+++ b/first_website/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
+
     <meta charset="utf-8">
     <title>My first Website</title>
     <link rel="stylesheet" href="\assets\stylesheets">
+
   </head>
+
   <body>
-    <h1><font size="2">My first Website</font></h1>
-    <p>I will descend on Chicago to discuss the latest technologies with the brightest web designers and front-end devs</p>
-    <p>first change and commit with GitKraken. this line was changed</p>
-    <p>second change check if push works</p>
-    <div class="social">
-      <p>I may be found on...</p>
-      <p>Additionally, I have a profile on...</p>
-    </div>
+
+    <header>
+
+      <h1>Styles Conference</h1>
+      <h3>August 24&ndash;26th&mdash; Chicago, IL</h3>
+
+    </header>
+
+    <section>
+
+      <h2><font size="4">Dedicated to the Craft of Building Websites</font></h2>
+      <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+
+    </section>
+
+    <section>
+
+      <section>
+        <h5>Speakers</h5>
+        <h3>World-Class Speakers</h3>
+        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+      </section>
+
+      <section>
+        <a href="http://www.google.de">Das ist ein Link zu Google</a>
+      </section>
+    </section>
+
+    <footer>
+      <small>&copy; Styles Conference</small>
+    </footer>
   </body>
+
 </html>
