Email Insta Links hinzugefügt

--- a/odins_website/odin.html
+++ b/odins_website/odin.html
@@ -20,12 +20,18 @@
         <h4>Meine Hobby's:</h4>
         <li>Katze ärgern</li>
         <li>Betteln</li>
-        <li>Ballspielen</li>
+        <li>Ball spielen</li>
       </section>
       <section>
         <h4>Lieblingsessen:</h4>
         <li>Wiener</li>
       </section>
+
+      <section>
+        <a href="https://www.instagram.com/odinisthegreatest/" target="_blank">Folgt mir auf Insta</a>
+        <a href="mailto:maxeee.msk@gmail.com?subject=Mail%20an%20Odin&">Schreibt mir eine E-mail</a>
+      </section>
+
     </section>
   </body>
 </html>
