Eisenhimmel und Odinswebsite aufsetzen

--- a/odins_website/odin.html
+++ b/odins_website/odin.html
@@ -4,33 +4,63 @@
     <meta charset="utf-8">
     <title>Odin's Website: a website about the best dog in the whole wide world!</title>
   </head>
+
   <body>
+
     <header>
-      <h1><strong>Odin the greatest dog</strong></h1>
+      <h1>
+        <a href="#">Odin the greatest dog</a>
+      </h1>
       <h3>living my best life in Landshut</h3>
+
+      <nav>
+        <a href="pictures.html">Bilder</a>
+        <a href="tricks.html">Tricks</a>
+        <a href="learning.html">Schule</a>
+        <a href="friends.html">Freunde</a>
+        <a href="blog.html">Blog</a>
+      </nav>
     </header>
 
     <section>
+
       <h4><strong>Über mich:</strong></h4>
-      <p></p>
+      <p>Auf meiner Webseite könnt ihr <a href="pictures.html">Bilder<a> von mir und meinen <a href="friends.html">Freunden</a> ansehen. Außerdem kann ich ein paar coole <a href="tricks.html">Tricks</a>. </p>
+
     </section>
 
     <section>
+
       <section>
         <h4>Meine Hobby's:</h4>
         <li>Katze ärgern</li>
         <li>Betteln</li>
         <li>Ball spielen</li>
       </section>
+
       <section>
         <h4>Lieblingsessen:</h4>
         <li>Wiener</li>
       </section>
 
-      <section>
+      <footer>
+
+        <p>
         <a href="https://www.instagram.com/odinisthegreatest/" target="_blank">Folgt mir auf Insta</a>
+        </p>
+        <p>
         <a href="mailto:maxeee.msk@gmail.com?subject=Mail%20an%20Odin&">Schreibt mir eine E-mail</a>
-      </section>
+        </p>
+
+        <nav>
+          <a href="pictures.html">Bilder</a>
+          <a href="tricks.html">Tricks</a>
+          <a href="learning.html">Schule</a>
+          <a href="friends.html">Freunde</a>
+          <a href="blog.html">Blog</a>
+        </nav>
+
+      <footer>
 
     </section>
   </body>
