css file change folder

--- a/odins_website/odin.html
+++ b/odins_website/odin.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Odin's Website: a website about the best dog in the whole wide world!</title>
+    <link rel="stylesheet" href="main.css">
   </head>
 
   <body>
@@ -12,6 +13,13 @@
         <a href="#">Odin the greatest dog</a>
       </h1>
       <h3>living my best life in Landshut</h3>
+
+      <ul>
+        <li><a href="default.asp">Home</a></li>
+        <li><a href="news.asp">News</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="about.asp">About</a></li>
+      </ul> 
 
       <nav>
         <a href="pictures.html">Bilder</a>
