set up website layout and navigation bar

--- a/odins_website/friends.html
+++ b/odins_website/friends.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Odin's Website: Freunde</title>
+  <link rel="stylesheet" href="main.css">
+</head>
 
+  <body>
+    <header>
+      <h1>
+        <a>Ich und meine Freunde</a>
+      </h1>
+
+      <nav>
+        <li><a href="odin.html">Home</a></li>
+        <li><a href="pictures.html">Bilder</a></li>
+        <li><a href="tricks.html">Tricks</a></li>
+        <li><a href="learning.html">Schule</a></li>
+        <li><a class="active" href="friends.html">Freunde</a></li>
+        <li style="float:right"><a href="blog.html">Blog</a></li>
+      </nav>
+    </header>
+    <footer>
+
+      <p>
+      <a href="https://www.instagram.com/odinisthegreatest/" target="_blank">Folgt mir auf Insta</a>
+      </p>
+      <p>
+      <a href="mailto:maxeee.msk@gmail.com?subject=Mail%20an%20Odin&">Schreibt mir eine E-mail</a>
+      </p>
+
+      <nav>
+        <li><a href="odin.html">Home</a></li>
+        <li><a href="pictures.html">Bilder</a></li>
+        <li><a href="tricks.html">Tricks</a></li>
+        <li><a href="learning.html">Schule</a></li>
+        <li><a class="active" href="friends.html">Freunde</a></li>
+        <li style="float:right"><a href="blog.html">Blog</a></li>
+      </nav>
+
+    <footer>
   </body>
 </html>
