--- a/odins_website/odin.html
+++ b/odins_website/odin.html
@@ -10,30 +10,24 @@
 
     <header>
       <h1>
-        <a href="#">Odin the greatest dog</a>
+        <a style="text-decoration:none" href="odin.html">Odin the greatest dog</a>
       </h1>
       <h3>living my best life in Landshut</h3>
 
-      <ul>
-        <li><a href="default.asp">Home</a></li>
-        <li><a href="news.asp">News</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
-      </ul> 
-
       <nav>
-        <a href="pictures.html">Bilder</a>
-        <a href="tricks.html">Tricks</a>
-        <a href="learning.html">Schule</a>
-        <a href="friends.html">Freunde</a>
-        <a href="blog.html">Blog</a>
+        <li><a class="active" href="odin.html">Home</a></li>
+        <li><a href="pictures.html">Bilder</a></li>
+        <li><a href="tricks.html">Tricks</a></li>
+        <li><a href="learning.html">Schule</a></li>
+        <li><a href="friends.html">Freunde</a></li>
+        <li style="float:right"><a href="blog.html">Blog</a></li>
       </nav>
     </header>
 
     <section>
 
       <h4><strong>Über mich:</strong></h4>
-      <p>Auf meiner Webseite könnt ihr <a href="pictures.html">Bilder<a> von mir und meinen <a href="friends.html">Freunden</a> ansehen. Außerdem kann ich ein paar coole <a href="tricks.html">Tricks</a>. </p>
+      <p>Auf meiner Webseite könnt ihr <a style="text-decoration:none;" href="pictures.html">Bilder<a> von mir und meinen <a style="text-decoration:none;" href="friends.html">Freunden</a> ansehen. Außerdem kann ich ein paar coole <a style="text-decoration:none;" href="tricks.html">Tricks</a>. </p>
 
     </section>
 
@@ -54,18 +48,19 @@
       <footer>
 
         <p>
-        <a href="https://www.instagram.com/odinisthegreatest/" target="_blank">Folgt mir auf Insta</a>
+        <a style="text-decoration:none;" href="https://www.instagram.com/odinisthegreatest/" target="_blank">Folgt mir auf Insta</a>
         </p>
         <p>
-        <a href="mailto:maxeee.msk@gmail.com?subject=Mail%20an%20Odin&">Schreibt mir eine E-mail</a>
+        <a style="text-decoration:none;" href="mailto:maxeee.msk@gmail.com?subject=Mail%20an%20Odin&">Schreibt mir eine E-mail</a>
         </p>
 
         <nav>
-          <a href="pictures.html">Bilder</a>
-          <a href="tricks.html">Tricks</a>
-          <a href="learning.html">Schule</a>
-          <a href="friends.html">Freunde</a>
-          <a href="blog.html">Blog</a>
+          <li><a class="active" href="odin.html">Home</a></li>
+          <li><a href="pictures.html">Bilder</a></li>
+          <li><a href="tricks.html">Tricks</a></li>
+          <li><a href="learning.html">Schule</a></li>
+          <li><a href="friends.html">Freunde</a></li>
+          <li style="float:right"><a href="blog.html">Blog</a></li>
         </nav>
 
       <footer>
