--- a/odins_website/pictures.html
+++ b/odins_website/pictures.html
@@ -2,19 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title><strong>Odin's Bilder</strong></title>
+    <title>Odin's Website: Bilder</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <header>
+    <header class="container">
       <h1>Odin's Bilder</h1>
+
+      <nav>
+        <li><a href="odin.html">Home</a></li>
+        <li><a class="active" href="pictures.html">Bilder</a></li>
+        <li><a href="tricks.html">Tricks</a></li>
+        <li><a href="learning.html">Schule</a></li>
+        <li><a href="friends.html">Freunde</a></li>
+        <li style="float:right"><a href="blog.html">Blog</a></li>
+      </nav>
+
     </header>
-
-    <section>
-
-    </section>
-
-    <footer>
-
+    <footer class="container">
+      <nav>
+        <li><a href="odin.html">Home</a></li>
+        <li><a class="active" href="pictures.html">Bilder</a></li>
+        <li><a href="tricks.html">Tricks</a></li>
+        <li><a href="learning.html">Schule</a></li>
+        <li><a href="friends.html">Freunde</a></li>
+        <li style="float:right"><a href="blog.html">Blog</a></li>
+      </nav>
     </footer>
   </body>
 </html>
