--- a/odins_website/learning.html
+++ b/odins_website/learning.html
@@ -2,9 +2,30 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Odin's Website: Hundeschule</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-
+    <header>
+      <h1>Hundeschule</h1>
+      <nav>
+        <li><a href="odin.html">Home</a></li>
+        <li><a href="pictures.html">Bilder</a></li>
+        <li><a href="tricks.html">Tricks</a></li>
+        <li><a class="active" href="learning.html">Schule</a></li>
+        <li><a href="friends.html">Freunde</a></li>
+        <li style="float:right"><a href="blog.html">Blog</a></li>
+      </nav>
+    </header>
+    <footer>
+      <nav>
+        <li><a href="odin.html">Home</a></li>
+        <li><a href="pictures.html">Bilder</a></li>
+        <li><a href="tricks.html">Tricks</a></li>
+        <li><a class="active" href="learning.html">Schule</a></li>
+        <li><a href="friends.html">Freunde</a></li>
+        <li style="float:right"><a href="blog.html">Blog</a></li>
+      </nav>
+    </footer>
   </body>
 </html>
