Add Pictures in header

--- a/odins_website/odin.html
+++ b/odins_website/odin.html
@@ -10,10 +10,13 @@
 
     <header>
       <h1>
-        <a style="text-decoration:none" href="odin.html">Odin the greatest dog</a>
+        <a style="text-decoration:none; margin-left: 50px;" href="odin.html">Odin the greatest dog</a>
       </h1>
-      <h3>living my best life in Landshut</h3>
+      <img src="bilder\odin_bilder\IMG_1463.jpg" alt="Odin father of the gods">
+      <p style="margin-left: 600px; font-style: italic">living my best life in Landshut</p>
+    </header>
 
+    <div class="navbar">
       <nav>
         <li><a class="active" href="odin.html">Home</a></li>
         <li><a href="pictures.html">Bilder</a></li>
@@ -22,9 +25,9 @@
         <li><a href="friends.html">Freunde</a></li>
         <li style="float:right"><a href="blog.html">Blog</a></li>
       </nav>
-    </header>
-
-    <section>
+    </div>
+    <div class="introduction">
+    <section class="intro">
 
       <h4><strong>Über mich:</strong></h4>
       <p>Auf meiner Webseite könnt ihr <a style="text-decoration:none;" href="pictures.html">Bilder<a> von mir und meinen <a style="text-decoration:none;" href="friends.html">Freunden</a> ansehen. Außerdem kann ich ein paar coole <a style="text-decoration:none;" href="tricks.html">Tricks</a>. </p>
@@ -44,7 +47,7 @@
         <h4>Lieblingsessen:</h4>
         <li>Wiener</li>
       </section>
-
+      </div>
       <footer>
 
         <p>
