--- a/odins_website/pictures.html
+++ b/odins_website/pictures.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <header class="container">
+    <header>
       <h1>Odin's Bilder</h1>
 
       <nav>
@@ -19,7 +19,7 @@
       </nav>
 
     </header>
-    <footer class="container">
+    <footer >
       <nav>
         <li><a href="odin.html">Home</a></li>
         <li><a class="active" href="pictures.html">Bilder</a></li>
