--- a/first_website/index.html
+++ b/first_website/index.html
@@ -1,46 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
   <head>
-
+    <link rel="stylesheet" href="assets\stylesheets\main.css">
     <meta charset="utf-8">
-    <title>My first Website</title>
-    <link rel="stylesheet" href="\assets\stylesheets">
-
+    <title>CSS Position</title>
   </head>
-
   <body>
-
-    <header>
-
-      <h1>Styles Conference</h1>
-      <h3>August 24&ndash;26th&mdash; Chicago, IL</h3>
-
-    </header>
-
-    <section>
-
-      <h2><font size="4">Dedicated to the Craft of Building Websites</font></h2>
-      <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-
-    </section>
-
-    <section>
-
-      <section>
-        <h5>Speakers</h5>
-        <h3>World-Class Speakers</h3>
-        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-      </section>
-
-      <section>
-        <a href="http://www.google.de">Das ist ein Link zu Google</a>
-      </section>
-    </section>
-
-    <footer>
-      <small>&copy; Styles Conference</small>
-    </footer>
+    <div class="parent">
+      Parent
+      <div class="child-one child">One</div>
+      <div class="child-two child">Two</div>
+      <div class="child-three child">Three</div>
+    </div>
   </body>
-
 </html>
