Pics and eisengarage

--- a/iron_garage/iron_garage_home.html
+++ b/iron_garage/iron_garage_home.html
@@ -3,8 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Eisengarage</title>
+    <link rel="stylesheet" href="styles/css/main.css">
   </head>
   <body>
+    <header>
+      <img src="images\logo\gainerzlogo_schrift_lang_merged_2.png" style="margin-top: 20px; float: left;" class="logo" alt="gainerzlogo">
 
+      <div class="navbar">
+        <ul>
+         <li><a href="iron_garage_home.html">Home</a></li> 
+         <li><a href="iron_garage_shop.html">Shop</a></li>
+         <li><a href="iron_garage_training.html">Training</a></li>
+         <li><a href="iron_garage_members.html">Mitglieder</a></li>
+        </ul>
+      </div>
+    </header>
+
+    <footer>
+
+      <img src="images\logo\gainerzlogo_schrift_lang_merged_2.png" style="margin-top: 20px; float: left;" class="logo" alt="gainerzlogo">
+      
+      <div class="navbar">  
+        <ul>
+         <li><a href="iron_garage_home.html">Home</a></li> 
+         <li><a href="iron_garage_shop.html">Shop</a></li>
+         <li><a href="iron_garage_training.html">Training</a></li>
+         <li><a href="iron_garage_members.html">Mitglieder</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
